--- a/index.html
+++ b/index.html
@@ -1,10 +1,9 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 
 <head>
-    <title>
-      machine learning
-    </title>
+  <meta charset="UTF-8" />
+   <title>machine learning</title>
 
 </head>
 
